feat: adding @ApiNotFoundResponse annotation to the DidController.getByDID
